validate qualifier string
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/truefx@19 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -18,3 +18,5 @@ USER VISIBLE CHANGES
 
 * ConnectTrueFX() will give a more informative error if called with a bad 
   username or password.
+
+* ConnectTrueFX() will check to make sure `qualifier` is valid.
